# TUTOR

./: .env.example  .gitignore  IMPROVEMENTS.md  LICENSE  Makefile  README.md  USAGE_GUIDE.md  docker-compose.dev.yml  oh-my-openagent.jsonc  opencode.json  pyproject.toml  pytest.ini  research_workflow_design.md  run_real_workflows.py  run_workflows_step_by_step.py  test_api.py  test_writeflow.py  workflow_demo.py
.claude/: SKILL.md  settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
.trae/documents/: prd.md  technical-architecture.md
config/: encrypt_api_keys.py  providers.yaml.example
docs/: research_workflow_design.md
docs/adr/: ADR-20260327-.md  ADR-20260327-2026-03-20-13-47-utc.md  ADR-20260327-skills-2026-03-20.md  ADR-20260327-v3-2026-03-22-5-5.md  TUTOR-KNOWLEDGE-BASE.md  tutor-development-log.md
docs/dev-logs/: README.md
docs/internal/: REPO_CLEANUP_CANDIDATES.md  SPEC.md  V3-ARCHITECTURE.md
docs/superpowers/specs/: 2026-04-07-tutor-phase1-security-api-design.md
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api.py
tests/unit/: __init__.py  test_api_key_auth.py  test_api_response.py  test_env_example.py  test_health_routes.py  test_legacy_routes.py  test_legacy_wrapper.py  test_middleware.py  test_model_gateway.py  test_repository_factory.py  test_repository_interface.py  test_sqlalchemy_models.py  test_sqlalchemy_repository.py  test_workflow_engine.py
tutor/: Dockerfile  Dockerfile.latex  __main__.py  docker-compose.yml  requirements.txt  start.sh
tutor/api/: __init__.py  health.py  main.py  models.py  prometheus.py
tutor/api/middleware/: __init__.py  rate_limit.py  security.py
tutor/api/routes/: auth.py  events.py  health.py  legacy.py  projects.py  providers.py  uploads.py  users.py  v3_projects.py  websockets.py  workflows.py
tutor/api/sse/: __init__.py  events.py
tutor/cli/: __init__.py  api.py  backup.py  config.py  experiment.py  health.py  idea.py  migrate.py  review.py  tui.py  write.py
tutor/config/: __init__.py  config.production.yaml  config.template.yaml  config.yaml  loader.py
tutor/core/: backup.py  logging_config.py  migrate.py  secure_config.py
tutor/core/auth/: __init__.py  jwt.py  password.py  security.py  session.py  user.py
tutor/core/debate/: __init__.py  cross_model_debater.py  model_config.py
tutor/core/deployment/: __init__.py  config.py  exceptions.py  remote_executor.py  ssh_client.py
tutor/core/model/: __init__.py
tutor/core/monitor/: __init__.py  collector.py  cost_tracker.py  monitor.py  quota.py  quotas.py  resource_collector.py  resource_monitor.py  token_budget.py
tutor/core/multiagent/: __init__.py  base.py  message_bus.py  orchestrator.py
tutor/core/project/: __init__.py  manager.py  models.py  role_orchestrator.py  storage.py  v3_project.py
tutor/core/providers/: __init__.py  anthropic.py  azure.py  base.py  deepseek.py  local.py  minimax.py  openai.py  router.py
tutor/core/review/: __init__.py  auto_reviewer.py  cross_model_reviewer.py
tutor/core/scheduling/: __init__.py  experiment_manager.py  idea_scheduler.py
tutor/core/storage/: __init__.py  base.py  checkpoint_validation.py  factory.py  file_backend.py  legacy_impl.py  manager.py  models.py  (+4 more)
tutor/docs/: ARCHITECTURE.md  STATE.md  V3-RELEASE-PLAN.md
tutor/obsidian-notes/: ADR-001-model-gateway-design.md  ADR-20260327-2026-03-18-19.md  ADR-20260327-v2-2026-03-20-14-00-14-30-utc.md  DEV-LOG-2026-03-18.md  MODEL-GATEWAY.md  README.md  tutor-development-log.md
web/: index.html  package-lock.json  package.json  playwright.config.js  tsconfig.json  vite.config.js
web/public/: index.html
web/src/: App.js  App.jsx  api.js  index.css  index.css.newdesign  setupTests.js
workflow_results/: dacot_paper_draft.md  workflow1_idea_generation.json  workflow2_experiment_design.json  workflow3_paper_writing.json  workflow4_paper_review.json
workflow_results_real/: dacot_paper_draft.md  workflow1_idea_generation.json  workflow2_experiment_design.json  workflow3_paper_writing.json  workflow4_paper_review.json
(+65 files in other folders)
